Reflections refactor point commit