@@ -1052,7 +1052,7 @@ public class JSONObject {
 		try {
 			Object o = opt(key);
 			return o instanceof Number ? ((Number) o).doubleValue()
-					: new Double((String) o).doubleValue();
+					: Double.valueOf((String) o).doubleValue();
 		} catch (Exception e) {
 			return defaultValue;
 		}
@@ -1220,7 +1220,7 @@ public class JSONObject {
 	 *             If the key is null or if the number is invalid.
 	 */
 	public JSONObject put(String key, double value) throws JSONException {
-		put(key, new Double(value));
+		put(key, Double.valueOf(value));
 		return this;
 	}
 
