@@ -634,7 +634,7 @@ public class DomainStoreLoaderDatabase implements DomainStoreLoader {
 					entityRefs.add(tgt, pdFwd, src);
 					entityRefs.add(src, pdRev, tgt);
 				} else {
-					joinHandler.injectValue((String)row[1].o, src);
+					joinHandler.injectValue((String) row[1].o, src);
 				}
 			}
 			stmt.close();
@@ -670,7 +670,8 @@ public class DomainStoreLoaderDatabase implements DomainStoreLoader {
 				return null;
 			}
 			DomainTransformRequestPersistent request = store.domainDescriptor
-					.getDomainTransformRequestPersistentClass().newInstance();
+					.getDomainTransformRequestPersistentClass()
+					.getDeclaredConstructor().newInstance();
 			request.setId(requestId);
 			Statement statement = conn.createStatement();
 			request.setTransactionCommitTime(SqlUtils.getValue(statement,
@@ -2157,7 +2158,8 @@ public class DomainStoreLoaderDatabase implements DomainStoreLoader {
 						hasId = store.ensureEntity(clazz, id, 0L);
 					}
 				} else {
-					hasId = (HasId) clazz.getDeclaredConstructor().newInstance();
+					hasId = (HasId) clazz.getDeclaredConstructor()
+							.newInstance();
 				}
 				if (returnResults) {
 					loaded.add(hasId);
