@@ -42,7 +42,6 @@ import com.google.gwt.dev.ui.RestartServerEvent;
 import com.google.gwt.dev.util.InstalledHelpInfo;
 import com.google.gwt.dev.util.Util;
 import com.google.gwt.dev.util.arg.ArgHandlerDeployDir;
-import com.google.gwt.dev.util.arg.ArgHandlerDeprecatedDisableUpdateCheck;
 import com.google.gwt.dev.util.arg.ArgHandlerExtraDir;
 import com.google.gwt.dev.util.arg.ArgHandlerFilterJsInteropExports;
 import com.google.gwt.dev.util.arg.ArgHandlerIncrementalCompile;
@@ -512,16 +511,11 @@ public class DevMode extends DevModeBase implements RestartServerCallback {
 						Thread.currentThread().getContextClassLoader());
 				Class<? extends ServletContainerLauncher> sclClass = clazz
 						.asSubclass(ServletContainerLauncher.class);
-				options.setServletContainerLauncher(sclClass.newInstance());
+				options.setServletContainerLauncher(
+						sclClass.getDeclaredConstructor().newInstance());
 				options.setServletContainerLauncherArgs(sclArgs);
 				return true;
-			} catch (ClassCastException e) {
-				t = e;
-			} catch (ClassNotFoundException e) {
-				t = e;
-			} catch (InstantiationException e) {
-				t = e;
-			} catch (IllegalAccessException e) {
+			} catch (Exception e) {
 				t = e;
 			}
 			System.err.println(
@@ -607,7 +601,6 @@ public class DevMode extends DevModeBase implements RestartServerCallback {
 	 * The argument processor.
 	 */
 	protected static class ArgProcessor extends DevModeBase.ArgProcessor {
-		@SuppressWarnings("deprecation")
 		public ArgProcessor(HostedModeOptions options) {
 			super(options, false);
 			registerHandler(new ArgHandlerSuperDevMode(options));
@@ -618,10 +611,9 @@ public class DevMode extends DevModeBase implements RestartServerCallback {
 			registerHandler(new ArgHandlerExtraDir(options));
 			registerHandler(new ArgHandlerModulePathPrefix(options));
 			registerHandler(new ArgHandlerWorkDirOptional(options));
-		      registerHandler(new ArgHandlerDeprecatedDisableUpdateCheck());
 			registerHandler(new ArgHandlerMethodNameDisplayMode(options));
 			registerHandler(new ArgHandlerSourceLevel(options));
-			 registerHandler(new ArgHandlerFilterJsInteropExports(options));
+			registerHandler(new ArgHandlerFilterJsInteropExports(options));
 			registerHandler(new ArgHandlerIncrementalCompile(options));
 			registerHandler(new ArgHandlerModuleName(options) {
 				@Override
