@@ -32,7 +32,6 @@ import cc.alcina.framework.common.client.logic.domaintransform.ClientInstance;
 import cc.alcina.framework.common.client.logic.domaintransform.PersistentImpl;
 import cc.alcina.framework.common.client.logic.domaintransform.TransformManager;
 import cc.alcina.framework.common.client.logic.permissions.PermissionsManager;
-import cc.alcina.framework.common.client.util.AlcinaBeanSerializer;
 import cc.alcina.framework.common.client.util.Ax;
 import cc.alcina.framework.common.client.util.CommonUtils;
 import cc.alcina.framework.common.client.util.CommonUtils.DateStyle;
@@ -78,7 +77,8 @@ public class UserStories {
 		} else {
 			try {
 				clientInstance = PersistentImpl
-						.getImplementation(ClientInstance.class).newInstance();
+						.getImplementation(ClientInstance.class)
+						.getDeclaredConstructor().newInstance();
 				clientInstance.setUserAgent(userStory.getUserAgent());
 				clientInstance
 						.setHelloDate(userStory.getDate() == null ? new Date()
